--- a/HealthKitSample/Base.lproj/Main.storyboard
+++ b/HealthKitSample/Base.lproj/Main.storyboard
@@ -129,20 +129,20 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BHg-41-zvg">
-                                                    <rect key="frame" x="21" y="5" width="469" height="70"/>
+                                                    <rect key="frame" x="21" y="5" width="471" height="70"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                                     <connections>
                                                         <action selector="editingChanged:" destination="H4Y-N5-kxG" eventType="editingChanged" id="PTC-O3-qfw"/>
                                                     </connections>
                                                 </textField>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lbs" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z70-L6-ATB">
-                                                    <rect key="frame" x="506" y="5" width="71" height="70"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lbs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z70-L6-ATB">
+                                                    <rect key="frame" x="497" y="5" width="90" height="70"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="71" id="Kx0-27-g2I"/>
+                                                        <constraint firstAttribute="width" constant="90" id="Kx0-27-g2I"/>
                                                         <constraint firstAttribute="height" constant="70" id="eya-GK-pp9"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -152,8 +152,8 @@
                                                 <constraint firstItem="Z70-L6-ATB" firstAttribute="top" secondItem="BHg-41-zvg" secondAttribute="top" id="DNU-yD-fQL"/>
                                                 <constraint firstItem="BHg-41-zvg" firstAttribute="leading" secondItem="Wok-eb-BfA" secondAttribute="leadingMargin" constant="13" id="PCb-kH-jrK"/>
                                                 <constraint firstItem="BHg-41-zvg" firstAttribute="top" secondItem="Wok-eb-BfA" secondAttribute="topMargin" constant="-3" id="PzV-cP-1vZ"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Z70-L6-ATB" secondAttribute="trailing" constant="15" id="SHm-Gr-p4u"/>
-                                                <constraint firstItem="Z70-L6-ATB" firstAttribute="leading" secondItem="BHg-41-zvg" secondAttribute="trailing" constant="16" id="gr9-Cc-kEP"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Z70-L6-ATB" secondAttribute="trailing" constant="5" id="SHm-Gr-p4u"/>
+                                                <constraint firstItem="Z70-L6-ATB" firstAttribute="leading" secondItem="BHg-41-zvg" secondAttribute="trailing" constant="5" id="gr9-Cc-kEP"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -182,6 +182,7 @@
                     <connections>
                         <outlet property="dataTextField" destination="BHg-41-zvg" id="I46-09-XOm"/>
                         <outlet property="saveButton" destination="AbI-c9-Xsb" id="CH9-bx-CHR"/>
+                        <outlet property="unitsLabel" destination="Z70-L6-ATB" id="bSG-bf-KjM"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="obL-53-WVl" userLabel="First Responder" sceneMemberID="firstResponder"/>
