--- a/HealthKitSample/Base.lproj/Main.storyboard
+++ b/HealthKitSample/Base.lproj/Main.storyboard
@@ -143,7 +143,7 @@
                                                         <constraint firstAttribute="height" constant="70" id="eya-GK-pp9"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
